Fixed overflow problem

--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -28,6 +28,7 @@
     flex-direction: column;
     gap: 48px;
     justify-content: center;
+    align-items: center;
 
     @include on-desktop {
       flex-direction: row;
@@ -48,11 +49,7 @@
     &--features {
       display: flex;
       flex-direction: column;
-      align-items: baseline;
-    }
-
-    @include on-desktop {
-      grid-template-rows: repeat(3, 1fr);
+      align-items: center;
     }
   }
 
@@ -62,12 +59,24 @@
 
     &--photo {
       display: flex;
+      justify-content: center;
       gap: 24px;
     }
   }
 
   &__photo-bike {
     transition: transform 1s;
+
+    &--square {
+      width: 130px;
+      height: 130px;
+      background-position: center;
+
+      @include on-tablet {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
   &__photo-bike:hover {
